--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - uses: actions/checkout@v1
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+       
+      - name: Install Dependencies
+        run: npm install
           
       - name: Deploy
         run: npm run deploy
