--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v1
+        with:
+         repo-token: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Setup git
         run: |
