--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
       - uses: actions/checkout@v1
         with:
          repo-token: ${{ secrets.GITHUB_TOKEN }}
+         
+      - uses: webfactory/ssh-agent@v0.1.1
+        with:
+            ssh-private-key: ${{ secrets.ACCESS_TOKEN }}
         
       - name: Setup git
         run: |
