--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-         repo-token: ${{ secrets.GITHUB_TOKEN }}
-         
-      - uses: webfactory/ssh-agent@v0.1.1
-        with:
-            ssh-private-key: ${{ secrets.ACCESS_TOKEN }}
+         repo-token: ${{ secrets.ACCESS_TOKEN }}
         
       - name: Setup git
         run: |
