--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-         repo-token: ${{ secrets.ACCESS_TOKEN }}
+         repository: jdhrnndz/sort-algo-visualization
+         token: ${{ secrets.ACCESS_TOKEN }}
         
       - name: Setup git
         run: |
