--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           git config user.name "jdhrnndz"
           git config user.email "johndeniellehernandez@gmail.com"
+          git remote set-url origin https://github.com/jdhrnndz/sort-algo-visualization.git
         
       - name: Setup Node
         uses: actions/setup-node@v1
