--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           git config user.name "jdhrnndz"
           git config user.email "johndeniellehernandez@gmail.com"
-          git remote set-url origin https://github.com/jdhrnndz/sort-algo-visualization.git
+          git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/jdhrnndz/sort-algo-visualization.git
         
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -32,11 +32,12 @@ jobs:
         run: npm install
           
       - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BASE_BRANCH: master
-          BRANCH: gh-pages
-          FOLDER: build
+        run: npm run deploy
+        # uses: JamesIves/github-pages-deploy-action@releases/v3
+        # with:
+          # ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # BASE_BRANCH: master
+          # BRANCH: gh-pages
+          # FOLDER: build
     
