--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: portfolio CI
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
         with:
          repository: jdhrnndz/sort-algo-visualization
          token: ${{ secrets.ACCESS_TOKEN }}
@@ -24,9 +24,9 @@ jobs:
           git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/jdhrnndz/sort-algo-visualization.git
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '12.x'
+          node-version: 'latest'
 
       - name: Install Dependencies
         run: npm install
