--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,18 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+         repository: jdhrnndz/sort-algo-visualization
+         token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup git
         run: |
           git config user.name "jdhrnndz"
           git config user.email "johndeniellehernandez@gmail.com"
-          git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/jdhrnndz/sort-algo-visualization.git
-
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-         repository: jdhrnndz/sort-algo-visualization
-         token: ${{ secrets.ACCESS_TOKEN }}
+          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/jdhrnndz/sort-algo-visualization.git
 
       - name: Setup Node
         uses: actions/setup-node@v3
