--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,13 @@ jobs:
         uses: actions/checkout@v3
         with:
          repository: jdhrnndz/sort-algo-visualization
-         token: ${{ secrets.GITHUB_TOKEN }}
+         token: ${{ secrets.GH_PAT }}
 
       - name: Setup git
         run: |
           git config user.name "jdhrnndz"
           git config user.email "johndeniellehernandez@gmail.com"
-          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/jdhrnndz/sort-algo-visualization.git
+          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/jdhrnndz/sort-algo-visualization.git
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -33,5 +33,3 @@ jobs:
 
       - name: Build and Deploy
         run: npm run deploy
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
