--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: portfolio CI
+name: Portfolio CI
 
 on:
   push:
@@ -7,21 +7,21 @@ on:
 
 jobs:
   publish:
-    name: deploy to github pages
+    name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
         with:
          repository: jdhrnndz/sort-algo-visualization
          token: ${{ secrets.GH_PAT }}
 
-      - name: Setup git
-        run: |
-          git config user.name "jdhrnndz"
-          git config user.email "johndeniellehernandez@gmail.com"
-          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/jdhrnndz/sort-algo-visualization.git
+      # - name: Setup git
+      #   run: |
+      #     git config user.name "jdhrnndz"
+      #     git config user.email "johndeniellehernandez@gmail.com"
+      #     git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/jdhrnndz/sort-algo-visualization.git
 
       - name: Setup Node
         uses: actions/setup-node@v3
